# Titan-SKZ-Auth-API-Engine

./: CONSOLE-APP-API-SERVER-FILA-QEUE-MANAGER-POOL-AUTH-V1-DASH-B1.PY  CONSOLE-APP-API-SERVER-FILA-QEUE-MANAGER-POOL-AUTH-V1-DASH-B2.PY  CONSOLE-APP-API-SERVER-FILA-QEUE-MANAGER-POOL-AUTH-V1-STRESS-TEST.PY  CONSOLE-APP-API-SERVER-FILA-QEUE-MANAGER-POOL-AUTH-V1.PY  ESTRUTURA-PROJETO-ZKP.txt  README.md
titan_intra_service_auth/: README.md  __main__.py  pyproject.toml  requirements.txt  run.py  run_ca.py
titan_intra_service_auth/data/: ca_zkp.db
titan_intra_service_auth/docs/: 00-PLAN.md  ARCHITECTURE.md  NOTAS-PIPELINE-ECDSA.md  NOTAS-ZKP-CA.md  RUNBOOK.md
titan_intra_service_auth/src/titan_intra_service_auth/: __init__.py  main.py
titan_intra_service_auth/src/titan_intra_service_auth/application/: __init__.py
titan_intra_service_auth/src/titan_intra_service_auth/application/dtos/: __init__.py  mint_request.py  mint_response.py
titan_intra_service_auth/src/titan_intra_service_auth/application/ports/: __init__.py  concurrency_port.py  crypto_port.py  metrics_port.py
titan_intra_service_auth/src/titan_intra_service_auth/application/use_cases/: __init__.py  mint_token.py
titan_intra_service_auth/src/titan_intra_service_auth/config/: __init__.py  settings.py
titan_intra_service_auth/src/titan_intra_service_auth/domain/: __init__.py
titan_intra_service_auth/src/titan_intra_service_auth/domain/entities/: __init__.py  (+1 more)
titan_intra_service_auth/src/titan_intra_service_auth/infrastructure/: __init__.py  zkp_metrics.py
titan_intra_service_auth/tests/: __init__.py
(+228 files in other folders)
